--- a/projekt_2.css
+++ b/projekt_2.css
@@ -5,14 +5,19 @@ body {
 
 input {
             font-size: 20px;
-            background-color: #4cff00;
+            background-color: #0080FF;
             float: left;
             width: 515px;
             height: 60px;
             border: 3px solid black;
             text-align: center;
             margin: 5px;
-        }
+		}	
+			input:hover {
+                background-color: #FF8000;
+                color: black;
+            }
+        
 
 h1
 {	
