--- a/projekt_2.css
+++ b/projekt_2.css
@@ -5,7 +5,7 @@ body {
 
 input {
             font-size: 20px;
-            background-color: #0080FF;
+            background-color: #4cff00;
             float: left;
             width: 515px;
             height: 60px;
